Redefine / Modify ClassClassTest